--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -19,13 +19,14 @@ jobs:
         node-version: [ 18.18.1]
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
-    steps:
-    - uses: actions/checkout@v3
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v3
-      with:
-        node-version: ${{ matrix.node-version }}
-        cache: 'npm'
-    - run: npm ci
-    - run: npm run build --if-present
-    - run: npm test
+   on: push
+   jobs:
+     build-node:
+       runs-on: ubuntu-latest
+       container: node:16
+       steps:
+          - run: node --version
+          -run: npm --version
+          -uses: actions/checkout@v3
+          -run: npm install
+          -run: node app.js
