--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -3,15 +3,28 @@
 
 name: Node.js CI
 
+on:
+  push:
+    branches: [ "main" ]
+  pull_request:
+    branches: [ "main" ]
 
-on: push
-   jobs:
-     build-node:
-       runs-on: ubuntu-latest
-       container: node:16
-       steps:
-          - run: node --version
-          -run: npm --version
-          -uses: actions/checkout@v3
-          -run: npm install
-          -run: node app.js
+jobs:
+  build:
+
+    runs-on: ubuntu-latest
+
+    strategy:
+      matrix:
+        node-version: [18.x]
+        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
+
+    steps:
+    - uses: actions/checkout@v3
+    - name: Use Node.js ${{ matrix.node-version }}
+      uses: actions/setup-node@v3
+      with:
+        node-version: ${{ matrix.node-version }}
+        cache: 'npm'
+    - run: npm ci
+    - run: node app.js
